# dart-fss-text

./: .env.example  .gitignore  CLAUDE.md  README.md  backfill_data.py  collect_data.py  not_pennystock.txt  pyproject.toml
config/: toc.yaml  types.yaml
docs/research/: dart-crawling-tips.txt  dart-report-guide.md  how-to-parse-dart-reports.md
docs/vibe_coding/: architecture.md  experiments.md  implementation.md  prd.md
experiments/: FINDINGS.md  exp_01_download_document.py  exp_02_filing_search.py  exp_02b_broader_search.py  exp_02c_correct_search_api.py  exp_03_end_to_end_pipeline.py  exp_03b_direct_pipeline.py  exp_03b_direct_pipeline_LESSONS.py  exp_04_corrected_pipeline.py  exp_05_corp_list_mapping.py  exp_05b_corp_info_investigation.py  exp_05c_display_csv.py  exp_06_dartfss_stock_code_lookup.py  exp_07_search_download_organize.py  exp_08_corplist_test.py  exp_09_download_service_test.py  exp_10_xml_structure_exploration.py  exp_12_old_report_format.py  exp_13_text_based_section_matching.py  exp_14_test_refactored_parser.py  exp_15_corplist_csv_exploration.py
showcase/: showcase_01_text_query.py  showcase_02_live_data_query.py  showcase_03_disclosure_pipeline.py  showcase_04_corp_list_service.py  showcase_05_collect_all_companies.py
src/dart_fss_text/: __init__.py  config.py  types.py  validators.py
src/dart_fss_text/api/: __init__.py  backfill.py  pipeline.py  pipeline_parallel.py  query.py
src/dart_fss_text/models/: __init__.py  metadata.py  requests.py  section.py  sequence.py
src/dart_fss_text/parsers/: __init__.py  section_matcher.py  section_parser.py  table_parser.py  xml_parser.py
src/dart_fss_text/services/: __init__.py  corp_list_manager.py  corp_list_service.py  document_download.py  filing_search.py  storage_service.py
tests/: test_pipeline_parallel.py  test_smoke.py
tests/integration/: __init__.py  test_corp_list_manager_integration.py  test_document_download_integration.py  test_filing_search_integration.py  test_storage_service_integration.py
tests/unit/: conftest.py  test_config.py  test_corp_list_manager.py  test_corp_list_service.py  test_disclosure_pipeline.py  test_document_download_service.py  test_filing_search_service.py  test_metadata.py  test_models.py  test_sequence.py  test_storage_service.py  test_types.py  test_validators.py  test_xml_parser.py
